--- a/translations/en.json
+++ b/translations/en.json
@@ -18,5 +18,24 @@
   "Home": {
     "title": "Inca Trail Operator: Travel Tours, Activities, and Things to Do",
     "description": "Inca Trail Operator Official Site – Browse and book over 1,000 things to do with Inca Trail Operator. Plus, we offer free cancellation and flexible payment options for stress-free travel."
+  },
+  "AuthSignIn": {
+    "metadata": {
+      "title": "Dashboard - IncaTrailOperator.com"
+    },
+    "title": "Sign In",
+    "labels": {
+      "email": "Email",
+      "password": "Password"
+    },
+    "sign-in": "Sign in",
+    "weelcome": "Welcome back, {name}!",
+    "error-session": "Unable to start session"
+  },
+  "Dashboard": {
+    "metadata": {
+      "title": "Attraction Product - IncaTrailOperator.com"
+    },
+    "log-out": "Log out"
   }
 }
